--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,16 @@ go:
   - "1.x"
 jobs:
   include:
-    - stage: build
-      script: go build ./...
-    - stage: test
-      script:
-        - go get github.com/mattn/goveralls
-        - go test -v -covermode=count -coverprofile=coverage.out ./...
-        - $GOPATH/bin/goveralls -coverprofile=coverage.out -service=travis-ci
-    - stage: docker build
-      script:
-        - docker build --rm -t "${DOCKER_USERNAME}/sidisibot:latest" -t "${DOCKER_USERNAME}/sidisibot:git$(git rev-parse --short HEAD)" .
+    # - stage: build
+    #   script: go build ./...
+    # - stage: test
+    #   script:
+    #     - go get github.com/mattn/goveralls
+    #     - go test -v -covermode=count -coverprofile=coverage.out ./...
+    #     - $GOPATH/bin/goveralls -coverprofile=coverage.out -service=travis-ci
+    # - stage: docker build
+    #   script:
+    #     - docker build --rm -t "${DOCKER_USERNAME}/sidisibot:latest" -t "${DOCKER_USERNAME}/sidisibot:git$(git rev-parse --short HEAD)" .
     - stage: docker push
       if: branch = master
       script:
